fix: fix shift key bug

--- a/styles.scss
+++ b/styles.scss
@@ -24,7 +24,7 @@
 
 .info {
   color:#055e7e;
-  margin: 530px auto 0;
+  margin: 540px auto 0;
   font-size: 24px;
   text-align: center;
   background: transparent;
